Fix scrollbar

--- a/frontend/src/components/present-poll/present-footer/present-footer.scss
+++ b/frontend/src/components/present-poll/present-footer/present-footer.scss
@@ -3,5 +3,5 @@
 
   display: flex;
   flex-shrink: 0;
-  overflow-x: scroll;
+  overflow: auto;
 }
